publications first commit

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,3 +17,4 @@
 @import 'team/all-team';
 @import 'team/all-team-member.scss';
 @import 'contact/contact.scss';
+@import 'publications/publications.scss';
