publications finish html document

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,3 +18,4 @@
 @import 'team/all-team-member.scss';
 @import 'contact/contact.scss';
 @import 'publications/publications.scss';
+@import 'publications/publications-entry.scss';
